2001-02-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (RestoreWithdrawnLocation):
	* fvwm/fvwm.c (CaptureAllWindows):
	(CaptureOneWindow):
	(StartupStuff):
	* fvwm/externs.h:
	* fvwm/builtins.c (do_recapture):
	fixed windows migrating to current page on recapture

	* fvwm/menus.c (MenuInteraction):
	minor posting fix

	* fvwm/stack.c (RaiseOrLowerWindow):
	reduce flickering when raising windows

	* fvwm/misc.c (intersect_xrectangles):
	* fvwm/borders.c (RedrawBorder):
	Fixed clipping of depresser dorder parts

	* fvwm/move_resize.c (Maximize):
	(handle_stick):
	* fvwm/builtins.c (WindowShade):
	* fvwm/icons.c (DeIconify):
	regrab buttons on focused window when deiconifying or unshading or
	(un)maximizing or (un)sticking a window

	* fvwm/borders.c (DrawButton):
	(RedrawButtons):
	* fvwm/menus.c (paint_menu):
	* libs/Graphics.c (CreateGradientPixmap):
	(CreateGradientPixmapFromString):
	* fvwm/borders.c (RedrawBorder):
	(RedrawButtons):
	(RedrawTitle):
	(draw_clipped_decorations):
	* fvwm/events.c (HandleExpose):
	Reworked decoration redrawing code so that only the exposed parts are
	redrawn.  This should dramatically reduce flickering during window
	moves. However, Title buttons and titles with Pixmap, TiledPixmap or
	MiniIcon title styles do not fully benefit from the patch.

	* fvwm/misc.c (merge_rectangles):
	new function

2001-02-18  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/borders.c (RedrawBorder):
	Do not draw inverted left and right borders on shaded windows
	(RedrawTitle):
	made static

	* fvwm/update.c (apply_window_updates):
	Changes in MaxWindowSize style are handles properly for shaded and
	maximized windows

	* fvwm/style.c (ProcessNewStyle):
	Small values of MaxWindosSize style are no longer ignored

	* fvwm/fvwm.c (InitVariables):
	* fvwm/screen.h (ScreenInfo):
	* fvwm/builtins.c (SetBugOptions):
	* fvwm/events.c (HandleFocusIn):
	suppress focus flickering with application modal Qt dialog windows with