@@ -1,3 +1,9 @@
+2001-02-20  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/menus.c (MenuInteraction):
+	* fvwm/menus.h (struct):
+	rewrote posting logic
+
 2001-02-19  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/add_window.c (RestoreWithdrawnLocation):
